--- a/kidz tution tracker/Payments.storyboard
+++ b/kidz tution tracker/Payments.storyboard
@@ -8,13 +8,13 @@
         <!--Pending Payment Table View Controller-->
         <scene sceneID="aKY-Nw-eXO">
             <objects>
-                <tableViewController storyboardIdentifier="pendingPayment" automaticallyAdjustsScrollViewInsets="NO" id="Q3f-Eg-cpp" customClass="PendingPaymentTableViewController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="pendingPayment" automaticallyAdjustsScrollViewInsets="NO" id="Q3f-Eg-cpp" customClass="PendingPaymentTableViewController" customModule="Activity_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="RI9-hL-RuA">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" id="JIr-EK-fWG" customClass="PendingPaymentHeaderCell" customModule="kidz_tuition_tracker" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" id="JIr-EK-fWG" customClass="PendingPaymentHeaderCell" customModule="Activity_Tracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="600" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JIr-EK-fWG" id="1ou-qb-0xs">
@@ -56,7 +56,7 @@
                                     <outlet property="tuitionLabel" destination="qTP-7X-td7" id="LSP-EK-czY"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pendingPaymentTableViewCell" id="80x-e7-q5e" customClass="PendingPaymentCell" customModule="kidz_tuition_tracker" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pendingPaymentTableViewCell" id="80x-e7-q5e" customClass="PendingPaymentCell" customModule="Activity_Tracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="88" width="600" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="80x-e7-q5e" id="kzF-EP-DPW">
@@ -121,13 +121,13 @@
         <!--Payment Tuition List Table View Controller-->
         <scene sceneID="uvM-m0-ykZ">
             <objects>
-                <tableViewController storyboardIdentifier="historyPayment" id="kcA-e8-WeN" customClass="PaymentTuitionListTableViewController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="historyPayment" id="kcA-e8-WeN" customClass="PaymentTuitionListTableViewController" customModule="Activity_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" id="kbg-2L-R1W">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="HistoryTuitionViewCell" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="HistoryTuitionViewCell" id="zSF-VM-RJ2" customClass="PaymentTuitionTableViewCell" customModule="kidz_tuition_tracker" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="HistoryTuitionViewCell" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="HistoryTuitionViewCell" id="zSF-VM-RJ2" customClass="PaymentTuitionTableViewCell" customModule="Activity_Tracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zSF-VM-RJ2" id="Kg4-6G-11e">
@@ -204,7 +204,7 @@
         <!--Payment History Table View Controler-->
         <scene sceneID="Vkd-yg-Raa">
             <objects>
-                <tableViewController id="vth-wg-RB7" customClass="PaymentHistoryTableViewControler" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="vth-wg-RB7" customClass="PaymentHistoryTableViewControler" customModule="Activity_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="rSk-6C-QVi">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -249,7 +249,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyPaymentTableViewCell" id="6yZ-4B-Fav" customClass="PaymentHistoryCell" customModule="kidz_tuition_tracker" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyPaymentTableViewCell" id="6yZ-4B-Fav" customClass="PaymentHistoryCell" customModule="Activity_Tracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="152" width="600" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6yZ-4B-Fav" id="l56-GQ-154">
@@ -306,7 +306,7 @@
         <!--Payment Edit Controller-->
         <scene sceneID="GBS-DQ-mrz">
             <objects>
-                <viewController id="byf-SC-Jw6" customClass="PaymentEditController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="byf-SC-Jw6" customClass="PaymentEditController" customModule="Activity_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="VQB-3G-U8B"/>
                         <viewControllerLayoutGuide type="bottom" id="F6Y-0K-AIJ"/>
@@ -316,7 +316,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Bt8-zd-U7A">
-                                <rect key="frame" x="20" y="74" width="560" height="120"/>
+                                <rect key="frame" x="20" y="74" width="560" height="180"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="B1V-5t-KYp">
                                         <rect key="frame" x="0.0" y="0.0" width="560" height="60"/>
@@ -353,7 +353,7 @@
                                                 <color key="highlightedColor" red="0.07624528557062149" green="0.77416694164276123" blue="0.95813018083572388" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BFY-4i-cNU">
-                                                <rect key="frame" x="511" y="14.5" width="51" height="31"/>
+                                                <rect key="frame" x="511" y="14" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="statusChanged:" destination="byf-SC-Jw6" eventType="valueChanged" id="bqh-20-HxY"/>
                                                 </connections>
@@ -361,6 +361,20 @@
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="dYr-LX-4nM"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Soc-jq-Hha">
+                                        <rect key="frame" x="0.0" y="120" width="560" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCd-ho-6fD">
+                                                <rect key="frame" x="0.0" y="0.0" width="560" height="60"/>
+                                                <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="14"/>
+                                                <color key="textColor" red="0.18483450030000001" green="0.26589486769999998" blue="0.3444911859" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="highlightedColor" red="0.076245285570000002" green="0.77416694159999999" blue="0.95813018080000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="ckI-NX-5Zp"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
@@ -377,6 +391,7 @@
                         <outlet property="dayLabel" destination="DEx-FW-CLW" id="d1a-lk-D4Y"/>
                         <outlet property="paymentStatusSwitch" destination="BFY-4i-cNU" id="hbx-nK-zqd"/>
                         <outlet property="tuitionLabel" destination="Eij-hT-qp7" id="HKK-k3-gAY"/>
+                        <outlet property="updatedOnLabel" destination="wCd-ho-6fD" id="sWI-fy-rKx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VBR-2S-dgF" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -410,7 +425,7 @@
         <!--Payment View Controller-->
         <scene sceneID="xeG-49-eWY">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="9xZ-Px-DN8" customClass="PaymentViewController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="9xZ-Px-DN8" customClass="PaymentViewController" customModule="Activity_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="M0H-h2-7kg"/>
                         <viewControllerLayoutGuide type="bottom" id="A86-NG-dO4"/>
